# bellbird

./: .gitignore  ACKNOWLEDGEMENTS  CMakeLists.txt  COPYING  Makefile  Makefile.am  Makefile.inc  PKGBUILD  README  README.md  autogen.sh  config.guess  configure  configure.ac  poembellbirds.txt  toolchain-android.cmake  toolchain-mingw64.cmake
CMakeScripts/: CheckFileOffsetBits.cmake
config/: Makefile  common_make_rules  config  config.in
doc/: audiotroubleshooting.md  bellbird.1  building.md  dictionary.md
include/: HTS_engine.h  HTS_misc.h  Makefile  Makefile.am  bell_audio.h  bell_driver.h  bell_ff_sym.h  bell_file.h  bell_relation_sym.h  bell_track.h  config.h.in  cst_alloc.h  cst_audio.h  cst_cart.h  cst_cg.h  cst_cg_db.h  cst_endian.h  cst_error.h  cst_features.h  cst_ffeatures.h  cst_file.h  cst_item.h  cst_lexicon.h  cst_lts.h  cst_lts_rewrites.h  cst_phoneset.h  cst_regex.h  cst_relation.h  cst_string.h  cst_synth.h  cst_tokenstream.h  cst_track.h  cst_utt_utils.h  cst_utterance.h  cst_val.h  cst_val_const.h  cst_val_defs.h  cst_viterbi.h  cst_voice.h  cst_wave.h  (+6 more)
lang/: Makefile  Makefile.am
lang/cmulex/: Makefile  Makefile.am  cmu_lex.c  cmu_lex.h  cmu_lex_data_raw.c  cmu_lex_entries.c  cmu_postlex.c
lang/usenglish/: Makefile  Makefile.am  make_us_regexes  us_aswd.c  us_expand.c  us_f0_model.c  us_ffeatures.c  us_ffeatures.h  us_ffeatures_hts.c  us_ffeatures_hts.h  us_gpos.c  us_int_accent_cart.c  us_int_tone_cart.c  us_nums_cart.c  us_phoneset.c  us_phrasing_cart.c  us_pos_cart.c  us_regexes.h  us_text.c  us_text.h  usenglish.c  usenglish.h
main/: Makefile  Makefile.am  bellbird.c  bellbird_main.c  compile_regexes.c  t2p_main.c  text2phones.c
src/: Makefile  Makefile.am
src/audio/: Makefile  Makefile.am  au_alsa.c  au_android.c  au_none.c  au_pulse.c  au_streaming.c  au_win32.c  audio.c  bell_au_buff.c  bell_audio.c  native_audio.h
src/cg/: Makefile  Makefile.am  bell_track.c  cst_cg.c  cst_cg_load_voice.c  cst_cg_map.c  cst_cg_map.h  cst_mlpg.c  cst_mlpg.h  cst_mlsa.c  cst_mlsa.h  cst_spamf0.c  cst_spamf0.h  cst_vc.c  cst_vc.h
src/commonsynth/: HTS_misc.c  Makefile  Makefile.am  bell_driver.c  cholesky.c  ldl.c  mlsacore.c  mlsafunc.c
src/hrg/: Makefile  Makefile.am  cst_ffeature.c  cst_item.c  cst_rel_io.c  cst_relation.c  cst_utterance.c
src/hts/: HTS_engine.c  HTS_gstream.c  HTS_hidden.h  HTS_label.c  HTS_misc.c  HTS_model.c  HTS_pstream.c  HTS_sstream.c  HTS_vocoder.c  Makefile  Makefile.am
src/lexicon/: Makefile  Makefile.am  cst_lexicon.c  cst_lts.c  cst_lts_rewrites.c
src/nitechvoice/: Makefile  Makefile.am  nitech_engine.c  nitech_hidden.h  nitech_mlpg.c  nitech_model.c  nitech_tree.c  nitech_vocoder.c
src/regex/: Makefile  Makefile.am  cst_regex.c  hs_reg.h  make_cst_regexes  regcomp.c  regexec.c  regexp.c  regsub.c
src/speech/: Makefile  Makefile.am  cst_track.c  cst_track_io.c  cst_wave.c  cst_wave_io.c
src/stats/: Makefile  Makefile.am  cst_cart.c  cst_viterbi.c
src/synth/: Makefile  Makefile.am  cst_ffeatures.c  cst_phoneset.c  cst_ssml.c  cst_synth.c  cst_utt_utils.c  cst_voice.c  flite.c
src/utils/: Makefile  Makefile.am  bell_file.c  cst_alloc.c  cst_endian.c  cst_error.c  cst_features.c  cst_string.c  cst_tokenstream.c  cst_val.c  cst_val_const.c  cst_val_user.c
