
myincludedir = $(pkgincludedir)/include

FLITEHEADERS = cst_alloc.h \
	cst_cart.h cst_cg.h cst_endian.h \
	cst_error.h cst_features.h cst_ffeatures.h \
	cst_file.h cst_item.h \
	cst_lexicon.h cst_lts.h \
	cst_phoneset.h cst_regex.h \
	cst_relation.h cst_string.h cst_synth.h \
	cst_tokenstream.h cst_track.h \
	cst_utt_utils.h cst_utterance.h \
	cst_val.h cst_val_const.h cst_val_defs.h \
	cst_voice.h cst_wave.h \
        flite.h HTS_misc.h pstreamchol.h
HTSENGINEHEADERS = HTS_engine.h

BELLBIRDHEADERS = bell_audio.h bell_driver.h \
        bell_file.h bell_ff_sym.h bell_relation_sym.h

myinclude_HEADERS = $(FLITEHEADERS) \
                    $(HTSENGINEHEADERS) \
                    $(BELLBIRDHEADERS)
