SUBDIRS = audio utils regex hrg stats speech \
             lexicon synth cg hts commonsynth


noinst_LTLIBRARIES = libbellbird_src.la
libbellbird_src_la_SOURCES = 
libbellbird_src_la_LIBADD = audio/libbellbird_src_audio.la \
                            utils/libbellbird_src_utils.la \
                            regex/libbellbird_src_regex.la \
                            hrg/libbellbird_src_hrg.la \
                            stats/libbellbird_src_stats.la \
                            speech/libbellbird_src_speech.la \
                            lexicon/libbellbird_src_lexicon.la \
                            synth/libbellbird_src_synth.la \
                            cg/libbellbird_src_cg.la \
                            hts/libbellbird_src_hts.la \
                            commonsynth/libbellbird_src_commonsynth.la
