include $(top_srcdir)/Makefile.inc
AM_CFLAGS += -I.

noinst_HEADERS = cst_mlsa.h cst_mlpg.h cst_vc.h cst_cg_map.h cst_spamf0.h

noinst_LTLIBRARIES = libbellbird_src_cg.la

libbellbird_src_cg_la_SOURCES = cst_cg.c cst_mlsa.c cst_mlpg.c cst_vc.c \
                         cst_cg_load_voice.c cst_cg_map.c cst_spamf0.c

