include $(top_srcdir)/Makefile.inc
AM_CFLAGS += -I. -I$(top_srcdir)/src/commonsynth

noinst_HEADERS = cst_vc.h cst_cg_map.h cst_spamf0.h

noinst_LTLIBRARIES = libbellbird_src_cg.la

libbellbird_src_cg_la_SOURCES = cst_cg.c cst_mlsa.c cst_mlpg.c cst_vc.c \
                         cst_cg_load_voice.c cst_cg_map.c cst_spamf0.c

