###########################################################################
##  Nagoya Institute of Technology's HTS Engine                          ##
##  Integrated in the bellbird tree                                      ##
##  Peter M Drysdale (drysdalepete@gmail.com)                            ##
###########################################################################
include $(top_srcdir)/Makefile.inc

noinst_HEADERS = nitech_hidden.h

noinst_LTLIBRARIES = libbellbird_src_nitechvoice.la

libbellbird_src_nitechvoice_la_SOURCES = nitech_mlpg.c nitech_model.c nitech_tree.c \
                            nitech_vocoder.c nitech_engine.c

