include $(top_srcdir)/Makefile.inc
AM_CFLAGS += -I. $(SOCKETS)

noinst_LTLIBRARIES = libbellbird_src_utils.la

libbellbird_src_utils_la_SOURCES = cst_alloc.c cst_error.c cst_string.c \
       cst_tokenstream.c cst_val.c cst_features.c \
       cst_endian.c cst_val_const.c \
       cst_val_user.c bell_file.c

